<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbarlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:maxLines="3">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:title="WeatherDiary">

            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/periodTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/select_date"
                app:startIconDrawable="@drawable/ic_calendar_today">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/periodEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout> <!-- Date selection -->

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mainInfoCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/cityFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <fragment
                        android:id="@+id/cityAutocompleteFragment"
                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp" /> <!-- city selection fragment -->

                    <View
                        android:id="@+id/clearCityButton"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right|center_vertical"
                        android:background="@android:color/transparent" /> <!-- transparent view like a button to catch clicking on "X" button in acfCity -->
                </FrameLayout> <!-- city selection frame -->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:text="@string/load"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cityFrameLayout" /> <!-- Load button -->

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sampleSwitch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loadButton"
                    android:text="@string/switch1"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sampleSwitch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sampleSwitch1"
                    android:text="@string/switch1"/>

                <CheckBox
                    android:id="@+id/sampleCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/checkbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sampleSwitch2"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/sampleToggleButtonGroup"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sampleCheckBox"
                    >
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_calendar_today"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                        app:icon="@drawable/ic_day_night"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_alarm_24px"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/phone"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sampleToggleButtonGroup"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout> <!-- Phone input -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneTextInputLayout"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout> <!-- Email input -->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

     </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

